--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://github.com/adamijak/chata-s'
+baseURL = 'https://adamijak.github.io/chata-s/'
 languageCode = 'cs-cz'
 title = 'Chata S'
 theme = 'hugo-book'
