fix: update image paths and baseURL in configuration files

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://adamijak.github.io/chata-s/'
+baseURL = 'https://adamijak.github.io'
 languageCode = 'cs-cz'
 title = 'Chata S'
 theme = 'hugo-book'
